Prometheus-Operator/monitoring/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-frontends
  namespace: monitoring
spec:
  rules:
    - host: prometheus-frontends.k3s.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-frontends
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-backends
  namespace: monitoring
spec:
  rules:
    - host: prometheus-backends.k3s.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-backends
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-externals
  namespace: monitoring
spec:
  rules:
    - host: prometheus-externals.k3s.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-externals
                port:
                  number: 9090
